--- a/attire.html
+++ b/attire.html
@@ -62,7 +62,7 @@
     <div class="relative flex min-h-screen w-full flex-col overflow-x-hidden">
       <!-- Minimalist Navigation Bar -->
     <header
-    class="relative z-50 w-full px-8 md:px-20 py-8 flex items-center justify-between"
+    class="sticky top-0 z-50 w-full px-8 md:px-20 py-8 flex items-center justify-between bg-background-light/95 backdrop-blur-md border-b border-primary/10"
   >
     <div class="flex items-center gap-2">
       <span class="material-symbols-outlined text-taupe scale-75"
@@ -91,10 +91,28 @@
         >Attire</a
       >
     </nav>
-    <div class="md:hidden">
+    <div class="md:hidden" id="mobile-menu-btn">
       <span class="material-symbols-outlined cursor-pointer">menu</span>
     </div>
   </header>
+  <!-- Mobile Menu Overlay -->
+  <div id="mobile-menu" class="fixed inset-0 z-[200] bg-background-light flex-col hidden" aria-hidden="true">
+    <div class="flex items-center justify-between px-8 py-8 border-b border-primary/20">
+      <div class="flex items-center gap-2">
+        <span class="material-symbols-outlined text-taupe scale-75">flare</span>
+        <h2 class="text-sm font-semibold tracking-[0.3em] uppercase">B&amp;K</h2>
+      </div>
+      <button id="close-mobile-menu" aria-label="Close menu">
+        <span class="material-symbols-outlined">close</span>
+      </button>
+    </div>
+    <nav class="flex flex-col items-center justify-center flex-1 gap-12 text-base uppercase tracking-[0.3em] font-medium text-deep-black/70">
+      <a href="home.html" class="hover:text-deep-black transition-colors">Our Story</a>
+      <a href="rsvp.html" class="hover:text-deep-black transition-colors">RSVP</a>
+      <a href="venue.html" class="hover:text-deep-black transition-colors">Venue &amp; Accom</a>
+      <a href="attire.html" class="hover:text-deep-black transition-colors border-b border-primary/40 pb-1">Attire</a>
+    </nav>
+  </div>
       <main class="flex-grow pt-20 pb-24">
         <!-- Hero Section -->
         <section class="max-w-5xl mx-auto px-4 text-center mb-24">
@@ -122,7 +140,7 @@
         <section
           class="max-w-6xl mx-auto px-6 mb-32 grid grid-cols-1 md:grid-cols-2 gap-12 items-center"
         >
-          <div class="rounded-xl overflow-hidden shadow-2xl h-[500px] relative">
+          <div class="rounded-xl overflow-hidden shadow-2xl h-[320px] md:h-[500px] relative">
             <div
               class="absolute inset-0 bg-cover bg-center transition-transform hover:scale-105 duration-700"
               data-alt="Elegant spring wedding guests in pastel colors"
@@ -173,7 +191,7 @@
         <section class="max-w-4xl mx-auto px-6">
           <div class="bg-taupe p-1 rounded-xl shadow-2xl">
             <div
-              class="bg-moss-green rounded-[calc(theme(borderRadius.xl)-2px)] border border-primary/40 p-12 text-center"
+              class="bg-moss-green rounded-[calc(theme(borderRadius.xl)-2px)] border border-primary/40 p-6 md:p-12 text-center"
             >
               <h4
                 class="text-primary font-bold uppercase tracking-[0.4em] text-sm mb-10"
@@ -273,5 +291,30 @@
       </main>
       
     </div>
+  <script>
+    (function () {
+      var menuBtn = document.getElementById("mobile-menu-btn");
+      var mobileMenu = document.getElementById("mobile-menu");
+      var closeBtn = document.getElementById("close-mobile-menu");
+      if (!menuBtn || !mobileMenu || !closeBtn) return;
+      function openMenu() {
+        mobileMenu.classList.remove("hidden");
+        mobileMenu.classList.add("flex");
+        mobileMenu.setAttribute("aria-hidden", "false");
+        document.body.style.overflow = "hidden";
+      }
+      function closeMenu() {
+        mobileMenu.classList.add("hidden");
+        mobileMenu.classList.remove("flex");
+        mobileMenu.setAttribute("aria-hidden", "true");
+        document.body.style.overflow = "";
+      }
+      menuBtn.addEventListener("click", openMenu);
+      closeBtn.addEventListener("click", closeMenu);
+      document.addEventListener("keydown", function (e) {
+        if (e.key === "Escape") closeMenu();
+      });
+    })();
+  </script>
   </body>
 </html>
